--- a/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/numeric-text-box/components/numeric-text-box/numeric-text-box.component.html
@@ -2,7 +2,7 @@
     <input monaTextBox [disabled]="disabled" [readonly]="readonly" [ngModel]="visibleValue" (ngModelChange)="value$.next($event)"
            (keydown)="onKeydown($event)" (paste)="onPaste($event)" (wheel)="onMouseWheel($event)" (focus)="inputFocus.emit($event)"
            (blur)="inputBlur.emit($event)"
-           autocomplete="off" tabindex="0" #valueTextBox>
+           autocomplete="off" tabindex="0" class="mona-input-inner" #valueTextBox>
     <div class="mona-numeric-text-box-spinners" *ngIf="spinners">
         <button monaButton [disabled]="disabled" [tabIndex]="-1" (mousedown)="spin$.next('+')" (mouseup)="spinStop$.next()">
             <fa-icon [icon]="increaseIcon"></fa-icon>
