fix: style updates

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -423,6 +423,9 @@
 
                                 <input type="radio" monaRadioButton id="radioButton2" name="A"/>
                                 <label for="radioButton2">Radio Button Label 2</label>
+
+                                <input type="radio" monaRadioButton id="radioButton3" name="A" [disabled]="true"/>
+                                <label for="radioButton3">Radio Button Label 3</label>
                             </div>
                         </div>
                     </ng-template>
