--- a/projects/mona-ui/src/lib/inputs/modules/range-slider/components/range-slider/range-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/range-slider/components/range-slider/range-slider.component.scss
@@ -155,7 +155,7 @@ div.mona-range-slider-vertical {
 
     & div.mona-range-slider-handler {
         bottom: calc($track-thickness * 3 / -2);
-        transition: bottom ease-out 0.3s;
+        transition: bottom ease-out 0.3s, box-shadow 0.15s ease-in;
         &.mona-range-slider-dragging {
             transition: none;
         }
