--- a/projects/mona-ui/styles/base.scss
+++ b/projects/mona-ui/styles/base.scss
@@ -29,12 +29,16 @@
     --mona-confirm: #CCCCFC;
 
     --mona-border-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 6%));
+    --mona-border-color-dark: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 8%));
     --mona-focus-border-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) + 18%));
     --mona-primary-border-color: var(--mona-border-color);
     --mona-selected-border-color: var(--mona-primary-border-color);
 
-    --mona-shadow-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 6%));
-    --mona-popup-shadow: 0 5px 10px -3px var(--mona-shadow-color);
+    --mona-focus-shadow-color: var(--mona-border-color);
+    --mona-focus-shadow: 0 0 2px 0 var(--mona-focus-shadow-color);
+    --mona-focus-shadow-dark: 0 0 5px 0px hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 100%));
+    --mona-popup-shadow-color: hsl(var(--mona-background-base), calc(var(--mona-background-base-lightness) - 6%));
+    --mona-popup-shadow: 0 5px 10px -3px var(--mona-popup-shadow-color);
 
     --mona-text-base: 0, 0%;
     --mona-text-base-lightness: 80%;
