--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.scss
@@ -158,7 +158,7 @@ div.mona-slider-vertical {
 
     & div.mona-slider-handler {
         bottom: calc($track-thickness * 3 / -2);
-        transition: bottom ease-out 0.3s;
+        transition: bottom ease-out 0.3s,  box-shadow 0.15s ease-in;
         &.mona-slider-dragging {
             transition: none;
         }
