--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -22,40 +22,11 @@ input, textarea, button {
     font-family: inherit
 }
 
-@mixin active-background {
-    &:active {
-        background-color: var(--mona-background-active);
-    }
-}
-
-@mixin background-transition {
-    &, &:hover, &:focus {
-        transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
-    }
-}
-
 @mixin disabled {
     pointer-events: none;
     opacity: 0.37;
     cursor: default;
     user-select: none;
-}
-
-@mixin focus-transition {
-    &:focus, &:focus-within {
-        transition: box-shadow 0.15s ease-in-out;
-    }
-}
-
-@mixin focus-shadow {
-    &:focus, &:focus-within {
-        box-shadow: 0 0 2px 0 var(--mona-shadow-color);
-    }
-}
-
-@mixin focus-styles {
-    @include focus-shadow;
-    @include focus-transition;
 }
 
 @mixin font-small {
@@ -66,12 +37,6 @@ input, textarea, button {
 @mixin font-medium {
     font-size: 14px;
     line-height: 1.428571429;
-}
-
-@mixin hover-background {
-    &:hover {
-        background-color: var(--mona-background-hover);
-    }
 }
 
 @mixin scrollbars {
@@ -114,10 +79,6 @@ input, textarea, button {
     }
 }
 
-.mona-focused {
-    @include focus-shadow;
-}
-
 .mona-hidden {
     display: none;
 }
@@ -139,9 +100,16 @@ input, textarea, button {
     cursor: pointer;
     display: flex;
     outline: none;
-    @include hover-background;
-    @include active-background;
-    @include focus-shadow;
+    transition: box-shadow 0.15s ease-in;
+    &:active {
+        background-color: var(--mona-background-active);
+    }
+    &:hover {
+        background-color: var(--mona-background-hover);
+    }
+    &:focus, &:focus-within {
+        box-shadow: var(--mona-focus-shadow);
+    }
 }
 
 .mona-input-selector-value {
@@ -176,11 +144,13 @@ input, textarea, button {
 
 ul.mona-list {
     & li {
-        @include hover-background;
         color: var(--mona-text);
 
+        &:hover {
+            background-color: var(--mona-background-hover);
+        }
         &:active:not(.mona-selected) {
-            @include active-background;
+            background-color: var(--mona-background-active);
         }
 
         &.mona-selected {
@@ -225,7 +195,7 @@ button[monaButton] {
     @include font-medium;
     padding: 4px 8px;
 
-    transition: background-color 0.1s ease-in;
+    transition: background-color 0.15s ease-in, border 0.15s ease-in, color 0.15s ease-in, box-shadow 0.15s ease-in;
 
     &.mona-disabled {
         @include disabled;
@@ -273,8 +243,9 @@ button[monaButton] {
         }
     }
 
-
-    @include focus-styles;
+    &:focus {
+        box-shadow: var(--mona-focus-shadow);
+    }
 }
 
 /** Button Group */
@@ -289,6 +260,7 @@ mona-button-group button[monaButton] {
     background-color: var(--mona-background);
     color: var(--mona-text);
     border: 1px solid var(--mona-border-color);
+    transition: box-shadow 0.15s ease-in;
 
     & .mona-chip-content {
         font-size: 12px;
@@ -299,18 +271,22 @@ mona-button-group button[monaButton] {
         @include disabled;
     }
 
-    @include focus-styles;
+    &:focus {
+        box-shadow: var(--mona-focus-shadow);
+    }
 }
 
 .mona-chip-close {
     background-color: var(--mona-background-dark);
     color: var(--mona-text);
     border-left: 1px solid var(--mona-border-color);
-    //font-size: 14px;
 
-    @include background-transition;
-    @include hover-background;
-    @include active-background;
+    &:hover {
+        background-color: var(--mona-background-hover);
+    }
+    &:active {
+        background-color: var(--mona-background-active);
+    }
 }
 
 /** Split Button */
@@ -327,14 +303,28 @@ mona-popup-list-item {
     @include font-medium;
 }
 
+ul.mona-list mona-text-box.filter-box {
+    & div.mona-text-box {
+        border: none !important;
+        box-shadow: none !important;
+    }
+    & input {
+        @extend .mona-input-inner;
+    }
+}
+
 .mona-dropdown {
     @include font-medium;
-    @include focus-styles;
     display: inline-flex;
     border: 1px solid var(--mona-border-color);
     background: var(--mona-background);
+    transition: box-shadow 0.15s ease-in;
     &.mona-disabled {
         @include disabled;
+    }
+    &:focus, &:focus-within {
+        transition: box-shadow 0.1s ease-in;
+        box-shadow: var(--mona-focus-shadow);
     }
 }
 
@@ -402,8 +392,12 @@ mona-popup-list-item {
     @include font-medium;
     & table {
         & td {
-            @include hover-background;
-            @include active-background;
+            &:hover {
+                background-color: var(--mona-background-hover);
+            }
+            &:active {
+                background-color: var(--mona-background-active);
+            }
             &.mona-selected {
                 background-color: var(--mona-primary);
                 color: var(--mona-text-inverted);
@@ -473,7 +467,7 @@ div.mona-time-selector {
                 color: var(--mona-text-inverted);
             }
             &:not(.mona-selected):hover {
-                @include hover-background;
+                background-color: var(--mona-background-hover);
             }
         }
     }
@@ -525,7 +519,7 @@ div.mona-time-picker-popup {
 
 .mona-dropdown-popup-content-top {
     border-bottom: 1px solid transparent !important;
-    box-shadow: 0 -3px 10px -3px var(--mona-shadow-color) !important;
+    box-shadow: 0 -3px 10px -3px var(--mona-popup-shadow-color) !important;
 }
 
 /** Multi Select */
@@ -663,10 +657,9 @@ input[type="checkbox"][monaCheckBox] {
         align-items: center;
         cursor: pointer;
         color: var(--mona-text);
-        //font-size: 1rem;
         user-select: none;
         &:before {
-            content: "\2714";
+            content: " ";
             background-color: var(--mona-background);
             border: 1px solid var(--mona-border-color);
             border-radius: 0;
@@ -676,16 +669,13 @@ input[type="checkbox"][monaCheckBox] {
             width: 20px;
             height: 20px;
             margin-right: 4px;
-            //padding-bottom: 3px;
             vertical-align: middle;
             color: transparent;
-            transition:background-color 0.15s ease-out, color 0.15s ease-out, border 0.15s ease-out;
-        }
-        &:active:before:not(:disabled) {
-            box-shadow: 0 0 10px -3px var(--mona-shadow-color);
+            transition: background-color 0.3s ease-out, color 0.3s ease-out, border 0.3s ease-out, box-shadow 0.3s ease-out;
         }
     }
     &:checked + label:before {
+        content: "\2714";
         background-color: var(--mona-primary);
         color: var(--mona-text-inverted);
         border-color: var(--mona-selected-border-color);
@@ -711,7 +701,7 @@ input[type="checkbox"][monaCheckBox] {
         background-color: var(--mona-primary);
         color: var(--mona-background);
         border: 1px solid var(--mona-selected-border-color);
-        box-shadow: inset 0 0 0 1px var(--mona-background);
+        box-shadow: inset 0 0 0 2px var(--mona-background);
     }
     &:indeterminate:disabled + label:before {
         @include disabled;
@@ -721,8 +711,6 @@ input[type="checkbox"][monaCheckBox] {
 
 /** Color Palette */
 .mona-color-palette {
-    //background-color: var(--mona-background);
-    //border: 1px solid var(--mona-border-color);
     & > div.mona-color-cell {
         border: 2px solid black;
         &.mona-selected {
@@ -758,11 +746,12 @@ input[type="checkbox"][monaCheckBox] {
 .mona-numeric-text-box {
     background-color: var(--mona-background);
     border: 1px solid var(--mona-border-color);
+    transition: box-shadow 0.15s ease-in;
     &.mona-disabled {
         @include disabled;
     }
-    &:focus-within {
-        box-shadow: 0 0 10px -3px var(--mona-shadow-color);
+    &:focus, &:focus-within {
+        box-shadow: var(--mona-focus-shadow);
     }
 }
 
@@ -778,7 +767,7 @@ input[type="radio"][monaRadioButton] {
         &:before {
             content: " ";
             background-color: var(--mona-background);
-            border: 1px solid var(--mona-background);
+            box-shadow: 0 0 0 1px var(--mona-border-color-dark) inset;
             border-radius: 50%;
             display: inline-flex;
             align-items: center;
@@ -788,7 +777,7 @@ input[type="radio"][monaRadioButton] {
             margin-right: 4px;
             vertical-align: middle;
             color: transparent;
-            transition: all 0.15s ease-out, border 0.05s ease-out;
+            transition: box-shadow 0.3s ease-out;
         }
     }
     &:disabled + label {
@@ -797,21 +786,18 @@ input[type="radio"][monaRadioButton] {
     }
     &:disabled + label:before {
         @include disabled;
-        border: 1px solid var(--mona-border-color);
-    }
-    &:not(:disabled) + label:before {
-        border: 1px solid var(--mona-border-color);
     }
     &:checked + label:before {
         content: " ";
         background-color: var(--mona-primary);
         color: var(--mona-text-inverted);
-        border-width: 2px;
+        border-width: 1px;
+        box-shadow: inset 0 0 0 1px var(--mona-primary), inset 0 0 0 3px var(--mona-background);
+        transition: box-shadow 0.3s ease-out, background-color 0.3s ease-out;
     }
     &:checked:disabled + label:before {
         @include disabled;
         background-color: var(--mona-primary);
-        border: 2px solid var(--mona-border-color);
     }
 }
 
@@ -834,8 +820,9 @@ span.mona-range-slider-tick-label {
 div.mona-range-slider-handler {
     background-color: var(--mona-primary);
     border: 1px solid var(--mona-primary-border-color);
+    transition: box-shadow 0.15s ease-in;
     &:focus {
-        box-shadow: 0 0 10px 1px var(--mona-border-color);
+        box-shadow: var(--mona-focus-shadow-dark);
     }
 }
 
@@ -882,7 +869,7 @@ div.mona-slider-handler {
     background-color: var(--mona-primary);
     border: 1px solid var(--mona-primary-border-color);
     &:focus {
-        box-shadow: 0 0 10px 1px var(--mona-border-color);
+        box-shadow: var(--mona-focus-shadow-dark);
     }
 }
 
@@ -944,10 +931,11 @@ ol.mona-stepper-step-list {
 .mona-switch-handle {
     background-color: var(--mona-background-light);
     border: 1px solid var(--mona-border-color);
+    transition: box-shadow 0.15s ease-in;
     &:active:not(:disabled),
     &:focus-within:not(:disabled),
     &:focus:not(:disabled) {
-        box-shadow: 0 0 10px -3px var(--mona-shadow-color);
+        box-shadow: var(--mona-focus-shadow);
     }
 }
 
@@ -964,7 +952,7 @@ textarea[monaTextArea] {
     &:focus:not(:disabled),
     &:focus-within:not(:disabled),
     &:active:not(:disabled) {
-        box-shadow: 0 0 10px -3px var(--mona-shadow-color);
+        box-shadow: var(--mona-focus-shadow);
     }
     &[disabled] {
         @include disabled;
@@ -986,7 +974,7 @@ input[monaTextBox] {
     &:focus:not(:disabled),
     &:focus-within:not(:disabled),
     &:active:not(:disabled) {
-        box-shadow: 0 0 10px -3px var(--mona-shadow-color);
+        box-shadow: var(--mona-focus-shadow);
     }
     &[disabled] {
         @include disabled;
@@ -1009,7 +997,7 @@ input[monaTextBox].mona-input-inner {
     height: 100%;
     width: 100%;
     &:active, &:focus, &:focus-within {
-        box-shadow: 0 0 10px -3px var(--mona-shadow-color);
+        box-shadow: var(--mona-focus-shadow);
     }
     & span.mona-text-box-prefix,
     & span.mona-text-box-suffix {
@@ -1081,8 +1069,10 @@ div.mona-tab-strip-scroll {
     & button[monaButton] {
         color: var(--mona-text);
         background: transparent;
-        @include hover-background;
         box-shadow: none;
+        &:hover {
+            background-color: var(--mona-background-hover);
+        }
     }
 }
 
@@ -1095,8 +1085,9 @@ div.mona-tab-strip-scroll {
 
 .mona-contextmenu-item {
     @include font-medium;
-    @include hover-background;
-    @include background-transition;
+    &:hover {
+        background-color: var(--mona-background-hover);
+    }
     &:active {
         background-color: var(--mona-primary);
         color: var(--mona-text-inverted);
@@ -1110,6 +1101,10 @@ div.mona-tab-strip-scroll {
     }
     &.mona-focused {
         background-color: var(--mona-background-dark);
+        &:focus, &:focus-within {
+            //transition: box-shadow 0.15s ease-in;
+            box-shadow: var(--mona-focus-shadow);
+        }
     }
 }
 
@@ -1128,7 +1123,7 @@ ul.mona-menubar {
             @include disabled;
         }
         &:hover:not(.mona-active) {
-            @include hover-background;
+            background-color: var(--mona-background-hover);
         }
     }
 }
