fix: context menu submenu icon

--- a/projects/mona-ui-tester/src/styles.scss
+++ b/projects/mona-ui-tester/src/styles.scss
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "dist/mona-ui/styles/lumine";
-//@import "dist/mona-ui/styles/base-light";
+//@import "dist/mona-ui/styles/noelle-light";
 
 html, body {
     width: 100%;
     height: 100%;
     background: #202123;
-    //background: #fcfdfe;
+    //background: #f6f7f8;
     scroll-behavior: smooth;
 }
 
