--- a/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-item/context-menu-item.component.scss
+++ b/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-item/context-menu-item.component.scss
@@ -36,8 +36,11 @@ div.mona-contextmenu-item {
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-top: -2px;
             margin-left: -5px;
+        }
+        & fa-icon {
+            font-size: 12px;
+            line-height: 1.667;
         }
     }
 }
