--- a/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-item/context-menu-item.component.html
+++ b/projects/mona-ui/src/lib/menus/modules/context-menu/components/context-menu-item/context-menu-item.component.html
@@ -11,8 +11,11 @@
                       *ngIf="menuItem?.textTemplate"></ng-container>
     </div>
     <div class="mona-contextmenu-item-link" *ngIf="linkSpaceVisible">
-        <span *ngIf="menuItem.subMenuItems && menuItem.subMenuItems.length !== 0">&rsaquo;</span>
+        <span *ngIf="menuItem.subMenuItems && menuItem.subMenuItems.length !== 0">
+            <fa-icon [icon]="linkIcon"></fa-icon>
+        </span>
     </div>
 </div>
 
 <span *ngIf="menuItem.divider" class="divider"></span>
+<!-- &rsaquo; -->
