fix: use ngModel instead of value for date inputs

--- a/projects/mona-ui/src/lib/date-inputs/modules/date-picker/components/date-picker/date-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/date-picker/components/date-picker/date-picker.component.html
@@ -7,5 +7,5 @@
 </div>
 
 <ng-template #datePopupTemplate>
-    <mona-calendar [disabledDates]="disabledDates" [min]="min" [max]="max" [value]="value" (valueChange)="onCalendarValueChange($event)"></mona-calendar>
+    <mona-calendar [disabledDates]="disabledDates" [min]="min" [max]="max" [ngModel]="value" (ngModelChange)="onCalendarValueChange($event)"></mona-calendar>
 </ng-template>
