--- a/projects/mona-ui/src/lib/date-inputs/modules/date-time-picker/components/date-time-picker/date-time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/date-time-picker/components/date-time-picker/date-time-picker.component.html
@@ -13,10 +13,10 @@
 </div>
 
 <ng-template #datePopupTemplate>
-    <mona-calendar [disabledDates]="disabledDates" [min]="min" [max]="max" [value]="value" (valueChange)="onCalendarValueChange($event)"></mona-calendar>
+    <mona-calendar [disabledDates]="disabledDates" [min]="min" [max]="max" [ngModel]="value" (ngModelChange)="onCalendarValueChange($event)"></mona-calendar>
 </ng-template>
 
 <ng-template #timePopupTemplate>
-    <mona-time-selector [value]="value" (valueChange)="onTimeSelectorValueChange($event)"
+    <mona-time-selector [ngModel]="value" (ngModelChange)="onTimeSelectorValueChange($event)"
                         [hourFormat]="hourFormat" [showSeconds]="showSeconds"></mona-time-selector>
 </ng-template>
