--- a/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.scss
+++ b/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.scss
@@ -9,4 +9,6 @@ div.mona-dropdown-value {
     align-items: center;
     width: 100%;
     padding: 0 8px;
+    cursor: pointer;
+    user-select: none;
 }
