--- a/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
+++ b/projects/mona-ui/src/lib/filter/components/filter-menu/filter-menu.component.html
@@ -16,13 +16,13 @@
             <mona-drop-down-list [data]="dateFilterMenuDataItems|operatorFilter:operators" textField="text" valueField="value" [value]="selectedFilterMenuDataItemList[0]"
                                  (valueChange)="onFilterOperatorChange(0, $event)"></mona-drop-down-list>
 
-            <mona-date-picker [(value)]="dateFilterValues[0]" [format]="dateOptions.format" *ngIf="dateOptions.type==='date'"
+            <mona-date-picker [(ngModel)]="dateFilterValues[0]" [format]="dateOptions.format" *ngIf="dateOptions.type==='date'"
                               [disabled]="selectedFilterMenuDataItemList[0]?.value|valuelessOperator"></mona-date-picker>
 
-            <mona-date-time-picker [(value)]="dateFilterValues[0]" [format]="dateOptions.format" *ngIf="dateOptions.type==='datetime'"
+            <mona-date-time-picker [(ngModel)]="dateFilterValues[0]" [format]="dateOptions.format" *ngIf="dateOptions.type==='datetime'"
                                    [disabled]="selectedFilterMenuDataItemList[0]?.value|valuelessOperator"></mona-date-time-picker>
 
-            <mona-time-picker [(value)]="dateFilterValues[0]" [format]="dateOptions.format" *ngIf="dateOptions.type==='time'"
+            <mona-time-picker [(ngModel)]="dateFilterValues[0]" [format]="dateOptions.format" *ngIf="dateOptions.type==='time'"
                               [disabled]="selectedFilterMenuDataItemList[0]?.value|valuelessOperator"></mona-time-picker>
         </ng-container>
 
@@ -55,13 +55,13 @@
             <mona-drop-down-list [data]="dateFilterMenuDataItems|operatorFilter:operators" textField="text" valueField="value" [value]="selectedFilterMenuDataItemList[1]"
                                  (valueChange)="onFilterOperatorChange(1, $event)"></mona-drop-down-list>
 
-            <mona-date-picker [(value)]="dateFilterValues[1]" [format]="dateOptions.format" *ngIf="dateOptions.type==='date'"
+            <mona-date-picker [(ngModel)]="dateFilterValues[1]" [format]="dateOptions.format" *ngIf="dateOptions.type==='date'"
                               [disabled]="selectedFilterMenuDataItemList[1]?.value|valuelessOperator"></mona-date-picker>
 
-            <mona-date-time-picker [(value)]="dateFilterValues[1]" [format]="dateOptions.format" *ngIf="dateOptions.type==='datetime'"
+            <mona-date-time-picker [(ngModel)]="dateFilterValues[1]" [format]="dateOptions.format" *ngIf="dateOptions.type==='datetime'"
                                    [disabled]="selectedFilterMenuDataItemList[1]?.value|valuelessOperator"></mona-date-time-picker>
 
-            <mona-time-picker [(value)]="dateFilterValues[1]" [format]="dateOptions.format" *ngIf="dateOptions.type==='time'"
+            <mona-time-picker [(ngModel)]="dateFilterValues[1]" [format]="dateOptions.format" *ngIf="dateOptions.type==='time'"
                               [disabled]="selectedFilterMenuDataItemList[1]?.value|valuelessOperator"></mona-time-picker>
         </ng-container>
 
