--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.html
@@ -19,7 +19,7 @@
             <mona-numeric-text-box [formControlName]="column.field" [decimals]="3"></mona-numeric-text-box>
         </ng-container>
         <ng-container *ngIf="column.filterType==='date'">
-            <mona-date-picker [formControlName]="column.field" (valueChange)="onDateChange($event)"></mona-date-picker>
+            <mona-date-picker [formControlName]="column.field"></mona-date-picker>
         </ng-container>
         <ng-container *ngIf="column.filterType==='boolean'">
             <input type="checkbox" [formControlName]="column.field" monaCheckBox />
